adding embedding vectors

--- a/torch-examples2.ipynb
+++ b/torch-examples2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -15,6 +15,7 @@
    ],
    "source": [
     "import torch\n",
+    "import torch.nn as nn\n",
     "import numpy as np\n",
     "import time\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -23,16 +24,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.00058794 seconds\n",
-      "CPU times: user 725 µs, sys: 838 µs, total: 1.56 ms\n",
-      "Wall time: 922 µs\n"
+      "0.00004125 seconds\n",
+      "CPU times: user 550 µs, sys: 380 µs, total: 930 µs\n",
+      "Wall time: 674 µs\n"
      ]
     }
    ],
@@ -49,15 +50,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.13235497\n",
-      "0.29528403\n"
+      "0.17600203\n",
+      "0.37199426\n"
      ]
     }
    ],
@@ -85,14 +86,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([1, 1, 0, 1, 1, 1, 1, 1, 1, 1])\n"
+      "tensor([1, 1, 1, 1, 1, 1, 1, 1, 1, 1])\n"
      ]
     }
    ],
@@ -106,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -116,7 +117,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "Cell \u001b[0;32mIn[22], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tensor \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m out \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat((tensor, torch\u001b[38;5;241m.\u001b[39mtensor[\u001b[38;5;241m5\u001b[39m]), dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      4\u001b[0m out\n",
+      "Cell \u001b[0;32mIn[35], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m tensor \u001b[38;5;241m=\u001b[39m \u001b[43mtorch\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mtensor\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;241;43m1\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m2\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m3\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;241;43m4\u001b[39;49m\u001b[43m)\u001b[49m\n\u001b[1;32m      3\u001b[0m out \u001b[38;5;241m=\u001b[39m torch\u001b[38;5;241m.\u001b[39mcat((tensor, torch\u001b[38;5;241m.\u001b[39mtensor[\u001b[38;5;241m5\u001b[39m]), dim\u001b[38;5;241m=\u001b[39m\u001b[38;5;241m0\u001b[39m)\n\u001b[1;32m      4\u001b[0m out\n",
       "\u001b[0;31mTypeError\u001b[0m: tensor() takes 1 positional argument but 4 were given"
      ]
     }
@@ -292,7 +293,6 @@
     }
    ],
    "source": [
-    "import torch.nn as nn\n",
     "\n",
     "sample = torch.tensor([10., 10., 10.])\n",
     "linear = nn.Linear(3, 3, bias = False)\n",
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -324,6 +324,42 @@
     "\n",
     "print(soft_output)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([4, 100])\n"
+     ]
+    }
+   ],
+   "source": [
+    "vocab_size = 1000\n",
+    "embedding_dim = 100\n",
+    "embedding = nn.Embedding(vocab_size, embedding_dim)\n",
+    "\n",
+    "#Create some input indicees\n",
+    "input_indices = torch.LongTensor([1, 5, 3,2 ])\n",
+    "\n",
+    "#Apply the embedding layer\n",
+    "embedded_output = embedding(input_indices)\n",
+    "\n",
+    "#The output will be a tensor of shape (4, 100), where 4 is the number of input indices\n",
+    "# and 100 is the embedding dimension of the embedding layer\n",
+    "print(embedded_output.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
