--- a/bigram.ipynb
+++ b/bigram.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -29,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -85,18 +85,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([145796, 131139, 128472, 114641])\n",
+      "inputs:\n",
+      "tensor([[73,  1, 57, 62, 72, 73, 54, 67],\n",
+      "        [ 1, 73, 61, 58,  1, 31, 54, 71],\n",
+      "        [57, 75, 54, 67, 56, 58, 57,  1],\n",
+      "        [11,  1, 33, 73,  1, 62, 72,  1]])\n",
+      "targets:\n",
+      "tensor([[ 1, 57, 62, 72, 73, 54, 67, 56],\n",
+      "        [73, 61, 58,  1, 31, 54, 71, 60],\n",
+      "        [75, 54, 67, 56, 58, 57,  1, 74],\n",
+      "        [ 1, 33, 73,  1, 62, 72,  1, 54]])\n"
+     ]
+    }
+   ],
    "source": [
     "n = int(0.8 * len(data))\n",
     "train_data = data[:n]\n",
-    "val_data = data[n:] "
+    "val_data = data[n:] \n",
+    "\n",
+    "def get_batch(split):\n",
+    "    data = train_data if split == 'train' else val_data\n",
+    "    ix = torch.randint(len(data) - (block_size), (batch_size,))\n",
+    "    print(ix)\n",
+    "    x = torch.stack([data[i:i+block_size] for i in ix])\n",
+    "    y = torch.stack([data[i+1:i+block_size+1] for i in ix])\n",
+    "    x, y = x.to(device), y.to(device)\n",
+    "    return x, y\n",
+    "\n",
+    "x, y = get_batch('train')\n",
+    "print('inputs:')\n",
+    "# print(x.shape)\n",
+    "print(x)\n",
+    "print('targets:') \n",
+    "print(y)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +175,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class BigGramLanguageModel(nn.Module):\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
