--- a/torch-examples2.ipynb
+++ b/torch-examples2.ipynb
@@ -356,17 +356,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[ 27,  30,  33],\n",
+      "        [ 61,  68,  75],\n",
+      "        [ 95, 106, 117]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.tensor([[1,2],[3,4],[5,6]])\n",
+    "b = torch.tensor([[7,8,9],[10,11,12]])\n",
+    "print(a @ b)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.float32\n",
+      "torch.float32\n",
+      "tensor([[0., 0., 0.],\n",
+      "        [0., 0., 0.],\n",
+      "        [0., 0., 0.]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "int_64 = torch.randint(1, (3,2)).float()\n",
+    "\n",
+    "#type int_64\n",
+    "float_32 = torch.rand(2,3)\n",
+    "\n",
+    "print(int_64.dtype)\n",
+    "print(float_32.dtype)\n",
+    "result = torch.matmul(int_64, float_32)\n",
+    "print(result)"
+   ]
   },
   {
    "cell_type": "code",
