--- a/torch-examples2.ipynb
+++ b/torch-examples2.ipynb
@@ -406,10 +406,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([2, 3, 5])\n",
+      "2 3 5\n",
+      "torch.Size([2, 3, 5])\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = torch.rand(2, 3, 5)\n",
+    "print(a.shape)\n",
+    "x, y, z = a.shape\n",
+    "a = a.view(x, y , z)\n",
+    "print(x, y, z)\n",
+    "print(a.shape)"
+   ]
   },
   {
    "cell_type": "code",
