add example code for activation functions

--- a/torch-examples2.ipynb
+++ b/torch-examples2.ipynb
@@ -16,6 +16,7 @@
    "source": [
     "import torch\n",
     "import torch.nn as nn\n",
+    "from torch.nn import functional as F\n",
     "import numpy as np\n",
     "import time\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
@@ -430,17 +431,35 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 48,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([1.])\n"
+     ]
+    }
+   ],
+   "source": [
+    "## Relu function\n",
+    "x = torch.tensor([100], dtype=torch.float32)\n",
+    "y = F.tanh(x)\n",
+    "print(y)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "## transformer model architecture is used for NLP tasks. There are all these parameters that are passed to the model. \n",
+    "## The model is then trained on the data and the loss is calculated. The loss is then backpropagated through the model to update the weights.\n",
+    "## With Transfomer models we have inputs that are given embeddings as input embeddings and output embeddings. There are learnable parameters that are updated during training.\n",
+    "## After we've given these inputs embeddings and positional encondings, we pass them through the encoder and decoder layers. The encoder and decoder layers are made up of multi-head attention layers and feedforward layers."
+   ]
   },
   {
    "cell_type": "code",
