--- a/gpt-v1.ipynb
+++ b/gpt-v1.ipynb
@@ -16,7 +16,9 @@
     "batch_size = 4\n",
     "max_iters = 1000\n",
     "learning_rate = 3e-3\n",
-    "eval_iters = 250"
+    "eval_iters = 250\n",
+    "n_embd = 384\n",
+    "n_layer = 4"
    ]
   },
   {
@@ -147,12 +149,22 @@
     "class GPTLanguageModel(nn.Module):\n",
     "    def __init__(self, vocab_size):\n",
     "        super().__init__()\n",
-    "        self.token_embedding_table = nn.Embedding(vocab_size, vocab_size)\n",
+    "        self.token_embedding_table = nn.Embedding(vocab_size, n_embd)\n",
+    "        self.position_embedding_table = nn.Embedding(block_size, n_embd)\n",
+    "        self.blocks = nn.Sequential(*[Block(n_embd, n_head=n_head) for _ in range(n_layer)])\n",
     "        \n",
+    "        self.ln_f = nn.LayerNorm(n_embd) # final layer norm\n",
+    "        self.lm_head = nn.Linear(n_embd, vocab_size) # vocab size gives us the probabilities of each character\n",
     "    def forward(self, index, targets=None):\n",
     "        logits = self.token_embedding_table(index)\n",
     "        \n",
-    "        \n",
+    "        tok_emb = self.token_embedding_table(index)\n",
+    "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # T x C\n",
+    "        x = tok_emb + pos_emb # (B, T, C)  \n",
+    "        x = self.blocks(x) # (B, T, C)\n",
+    "        x = self.ln_f(x) # (B, T, C)\n",
+    "        logits = self.lm_head(x) # (B, T, vocab_size)\n",
+    "\n",
     "        if targets is None:\n",
     "            loss = None\n",
     "        else:\n",
