add MultiheadAttention, block and head class

--- a/gpt-v1.ipynb
+++ b/gpt-v1.ipynb
@@ -18,12 +18,13 @@
     "learning_rate = 3e-3\n",
     "eval_iters = 250\n",
     "n_embd = 384\n",
-    "n_layer = 4"
+    "n_layer = 4\n",
+    "dropout = 0.2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -146,6 +147,78 @@
     }
    ],
    "source": [
+    "\n",
+    "class Head(nn.Module):\n",
+    "    \"\"\"one head of self-attention\"\"\"\n",
+    "\n",
+    "    def __init__(self, head_size):\n",
+    "        super().__init__()\n",
+    "        self.key = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.query = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.value = nn.Linear(n_embd, head_size, bias=False)\n",
+    "        self.register_buffer('tril', torch.tril(torch.ones(block_size, block_size)))\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        B, T, C = x.shape\n",
+    "        q = self.query(x)\n",
+    "        k = self.key(x)\n",
+    "        #compute attention scores (\"affinities\")\n",
+    "        wei = q @ k.transpose(-2, -1) * k.shape[-1]**-0.5 # (B, T, hs) @ (B, hs, T) -> (B, T, T)\n",
+    "        wei = wei.masked_fill(self.tril[:T, :T] == 0, float('-inf')) # (B, T, T)\n",
+    "        wei = F.softmax(wei, dim=-1)\n",
+    "        wei = self.dropout(wei)\n",
+    "        #perform the weighted aggregation of the values\n",
+    "        v = self.value(x) #(B, T, hs)\n",
+    "        out = wei @ v # (B, T, T) @ (B, T, hs) -> (B, T, hs\n",
+    "        return out\n",
+    "    \n",
+    "class MultiHeadAttention(nn.Module):\n",
+    "    \"\"\" Multiple heads of self-attention in parallel \"\"\"\n",
+    "\n",
+    "    def __init__(self, num_heads, head_size):\n",
+    "        super().__init__( )\n",
+    "        self.heads = nn.ModuleList([Head(head_size) for _ in range(num_heads)])\n",
+    "        self.proj = nn.Linear(head_size * num_heads, n_embd)\n",
+    "        self.dropout = nn.Dropout(dropout)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        out = torch.cat([h(x) for h in self.heads], dim=-1) # (B, T, F) -> (b, T, [h1, h2, ...]) -> (B, T, F * h)\n",
+    "        out = self.dropout(self.proj(out))\n",
+    "        return out\n",
+    "    \n",
+    "class FeedForward(nn.Module):\n",
+    "    \"\"\" a simple linear layer followed by a non-linearity \"\"\"\n",
+    "    def _init_(self, n_embd):\n",
+    "        super()._init_()\n",
+    "        self.net = nn.Sequential(\n",
+    "            nn.Linear(n_embd, 4*n_embd),\n",
+    "            nn.ReLU(),\n",
+    "            nn.Linear(4 * n_embd, n_embd),\n",
+    "            nn.Dropout(dropout)\n",
+    "        )\n",
+    "    def forward(self, x):\n",
+    "        return self.net(x)\n",
+    "        \n",
+    "\n",
+    "class Block(nn.Module):\n",
+    "    \"\"\" Transformer Block \": communication followed by computation\"\"\"\n",
+    "    def __init__(self, n_embd, n_head=8):\n",
+    "        # n_embd is the number of embeddings dimensions, n_head is the number of heads\n",
+    "        super().__init__()\n",
+    "        head_size = n_embd // n_head\n",
+    "        self.sa =  nn.MultiHeadAttention(n_embd, n_head, head_size)\n",
+    "        self.ffwd = FeedFoward(n_embd)\n",
+    "        self.l1 = nn.LayerNorm(n_embd)\n",
+    "        self.l2 = nn.LayerNorm(n_embd)\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        y = self.sa(x)\n",
+    "        x = self.lnl(x + y) # add and norm\n",
+    "        y = self.ffwd(x)\n",
+    "        x = self.l2(x + y)\n",
+    "        return x\n",
+    "    \n",
     "class GPTLanguageModel(nn.Module):\n",
     "    def __init__(self, vocab_size):\n",
     "        super().__init__()\n",
@@ -155,6 +228,18 @@
     "        \n",
     "        self.ln_f = nn.LayerNorm(n_embd) # final layer norm\n",
     "        self.lm_head = nn.Linear(n_embd, vocab_size) # vocab size gives us the probabilities of each character\n",
+    "\n",
+    "        self.apply(self._init_weights)\n",
+    "\n",
+    "    def _init_weights(self, module):\n",
+    "        if isinstance(module, nn.Linear):\n",
+    "            torch.nn.init.normal_(module.weight, std=0.02)\n",
+    "            if module.bias is not None:\n",
+    "                torch.nn.init.zeros_(module.bias)\n",
+    "        elif isinstance(module, nn.Embedding):\n",
+    "            torch.nn.init.normal_(module.weight, std=0.02)\n",
+    "\n",
+    "\n",
     "    def forward(self, index, targets=None):\n",
     "        logits = self.token_embedding_table(index)\n",
     "        \n",
@@ -234,6 +319,13 @@
     "    optimizer.step()\n",
     "print(loss.item())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
