fix code errors and adjust hyper parameters

--- a/gpt-v1.ipynb
+++ b/gpt-v1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,19 +12,20 @@
     "\n",
     "device = 'cuda' if torch.cuda.is_available() else 'cpu'\n",
     "\n",
-    "block_size = 8\n",
-    "batch_size = 4\n",
-    "max_iters = 1000\n",
-    "learning_rate = 3e-3\n",
-    "eval_iters = 250\n",
+    "batch_size = 32\n",
+    "block_size = 128\n",
+    "learning_rate = 3e-4 #common learning rates 3e-4, 1e-3, 1e-4\n",
+    "eval_iters = 100\n",
+    "max_iters = 200\n",
     "n_embd = 384\n",
-    "n_layer = 4\n",
+    "n_head = 8\n",
+    "n_layer = 8 ## number of decoder blocks we have\n",
     "dropout = 0.2 "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [
     {
@@ -36,7 +37,7 @@
     }
    ],
    "source": [
-    "\n",
+    "chars = \"\"\n",
     "with open('wizard_of_oz.txt', 'r', encoding='utf-8') as f:\n",
     "    text = f.read()\n",
     "chars = sorted(set(text))\n",
@@ -52,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
@@ -75,21 +76,27 @@
      "output_type": "stream",
      "text": [
       "inputs:\n",
-      "tensor([[67, 58, 57,  1, 73, 68,  1, 73],\n",
-      "        [67,  1, 54,  1, 55, 54, 65, 65],\n",
-      "        [62, 64, 58,  1, 55, 58, 62, 67],\n",
-      "        [74, 72, 58, 57,  9,  1, 54, 67]])\n",
+      "tensor([[68, 56, 64,  ..., 68, 69, 65],\n",
+      "        [24,  3,  1,  ..., 61, 78, 23],\n",
+      "        [61, 54, 71,  ..., 67, 57, 58],\n",
+      "        ...,\n",
+      "        [60, 58, 57,  ...,  1, 72, 54],\n",
+      "        [ 1, 61, 54,  ..., 76, 57, 58],\n",
+      "        [67, 73,  1,  ..., 66, 54, 65]])\n",
       "targets:\n",
-      "tensor([[58, 57,  1, 73, 68,  1, 73, 61],\n",
-      "        [ 1, 54,  1, 55, 54, 65, 65, 68],\n",
-      "        [64, 58,  1, 55, 58, 62, 67, 60],\n",
-      "        [72, 58, 57,  9,  1, 54, 67, 57]])\n"
+      "tensor([[56, 64, 58,  ..., 69, 65, 58],\n",
+      "        [ 3,  1, 58,  ..., 78, 23,  1],\n",
+      "        [54, 71, 57,  ..., 57, 58, 71],\n",
+      "        ...,\n",
+      "        [58, 57,  1,  ..., 72, 54, 76],\n",
+      "        [61, 54, 72,  ..., 57, 58, 71],\n",
+      "        [73,  1, 54,  ..., 54, 65, 65]])\n"
      ]
     }
    ],
    "source": [
     "\n",
-    "n = int(0.8*len(data))\n",
+    "n = int(0.9*len(data))\n",
     "train_data = data[:n]\n",
     "val_data = data[n:]\n",
     "\n",
@@ -111,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,20 +139,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "?;aVfI cXICL&YZ8J'vd&&.!H-s1)0HmQ,.TV&7nk9A_Lb0i?6i]0x?y6sv&T!W*\"0U!_x]4fIeyAVBj\"﻿Q,U!&_8e!HOeEvU gi]- D)j(x:]!VJfcB﻿Yz\n",
-      "?L8BBFFN&bSOwhYA'n﻿z3V&p-2mC]KunBr[ID2UB3uhf0YOOACg6!mq](PL-F:9XWB7n?LAmm'1kIqGCi?L8?tx:4[AUOeW((P-[A3(QOAqcR]5.YN&TfI7&CM-HdCurk]LqB,am&tF, ,1stL9k?L;W(t7UE Y0g;yI7z﻿bS T['o?:4A4o?1i*O.y\"_7qB;QDu\"3TKPqc7bSucDE87pbuyenw'rk;-ny\".S OI\n",
-      "y[_I﻿z-H5OiZ(ai\"06E)6BMdWCuTg;GC0wSjUL1'\"﻿a'U5x?hv25&0kpiQDyc:,Q?LOEPy[1qhvI Vf,﻿;vvSkD&_kAMG4'fO'oxc-z6wZZ4y(zq;J9\"﻿r8d'djsIbS!*7&Gz2IbS_hAS 9H5Lb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "class Head(nn.Module):\n",
@@ -164,6 +160,7 @@
     "        q = self.query(x)\n",
     "        k = self.key(x)\n",
     "        #compute attention scores (\"affinities\")\n",
+    "        #k.shape[-1]**-0.5: This is a scaling factor that's commonly used in Transformer models to prevent the attention scores from becoming too large. k.shape[-1] gets the size of the last dimension of k (which is the dimension of the key vectors), and **-0.5 is equivalent to taking the square root and then the reciprocal (1 divided by the square root).\n",
     "        wei = q @ k.transpose(-2, -1) * k.shape[-1]**-0.5 # (B, T, hs) @ (B, hs, T) -> (B, T, T)\n",
     "        wei = wei.masked_fill(self.tril[:T, :T] == 0, float('-inf')) # (B, T, T)\n",
     "        wei = F.softmax(wei, dim=-1)\n",
@@ -187,10 +184,10 @@
     "        out = self.dropout(self.proj(out))\n",
     "        return out\n",
     "    \n",
-    "class FeedForward(nn.Module):\n",
+    "class FeedFoward(nn.Module):\n",
     "    \"\"\" a simple linear layer followed by a non-linearity \"\"\"\n",
-    "    def _init_(self, n_embd):\n",
-    "        super()._init_()\n",
+    "    def __init__(self, n_embd):\n",
+    "        super().__init__()\n",
     "        self.net = nn.Sequential(\n",
     "            nn.Linear(n_embd, 4*n_embd),\n",
     "            nn.ReLU(),\n",
@@ -203,20 +200,20 @@
     "\n",
     "class Block(nn.Module):\n",
     "    \"\"\" Transformer Block \": communication followed by computation\"\"\"\n",
-    "    def __init__(self, n_embd, n_head=8):\n",
+    "    def __init__(self, n_embd, n_head):\n",
     "        # n_embd is the number of embeddings dimensions, n_head is the number of heads\n",
     "        super().__init__()\n",
     "        head_size = n_embd // n_head\n",
-    "        self.sa =  nn.MultiHeadAttention(n_embd, n_head, head_size)\n",
+    "        self.sa =  MultiHeadAttention(n_head, head_size)\n",
     "        self.ffwd = FeedFoward(n_embd)\n",
-    "        self.l1 = nn.LayerNorm(n_embd)\n",
-    "        self.l2 = nn.LayerNorm(n_embd)\n",
+    "        self.ln1 = nn.LayerNorm(n_embd)\n",
+    "        self.ln2 = nn.LayerNorm(n_embd)\n",
     "\n",
     "    def forward(self, x):\n",
     "        y = self.sa(x)\n",
-    "        x = self.lnl(x + y) # add and norm\n",
+    "        x = self.ln1(x + y) # add and norm\n",
     "        y = self.ffwd(x)\n",
-    "        x = self.l2(x + y)\n",
+    "        x = self.ln2(x + y)\n",
     "        return x\n",
     "    \n",
     "class GPTLanguageModel(nn.Module):\n",
@@ -241,9 +238,9 @@
     "\n",
     "\n",
     "    def forward(self, index, targets=None):\n",
-    "        logits = self.token_embedding_table(index)\n",
-    "        \n",
-    "        tok_emb = self.token_embedding_table(index)\n",
+    "        B, T = index.shape\n",
+    "\n",
+    "        tok_emb = self.token_embedding_table(index) # (B,T,C)\n",
     "        pos_emb = self.position_embedding_table(torch.arange(T, device=device)) # T x C\n",
     "        x = tok_emb + pos_emb # (B, T, C)  \n",
     "        x = self.blocks(x) # (B, T, C)\n",
@@ -278,25 +275,23 @@
     "model = GPTLanguageModel(vocab_size)\n",
     "m = model.to(device)\n",
     "\n",
-    "context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
-    "generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
-    "print(generated_chars)"
+    "# context = torch.zeros((1,1), dtype=torch.long, device=device)\n",
+    "# generated_chars = decode(m.generate(context, max_new_tokens=500)[0].tolist())\n",
+    "# print(generated_chars)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "step: 0, train loss: 4.900, val loss: 4.913\n",
-      "step: 250, train loss: 4.313, val loss: 4.334\n",
-      "step: 500, train loss: 3.846, val loss: 3.855\n",
-      "step: 750, train loss: 3.486, val loss: 3.502\n",
-      "3.4114227294921875\n"
+      "step: 0, train loss: 4.422, val loss: 4.421\n",
+      "step: 100, train loss: 2.425, val loss: 2.473\n",
+      "2.2284913063049316\n"
      ]
     }
    ],
