fix preprocess script to  output split

--- a/gpt-v1.ipynb
+++ b/gpt-v1.ipynb
@@ -67,62 +67,8 @@
    ],
    "source": [
     "chars = \"\"\n",
-    "\n",
-    "def read_from_dataset():\n",
-    "    # Load the dataset\n",
-    "    dataset = load_dataset('Skylion007/openwebtext')\n",
-    "\n",
-    "    # Access the 'train' split of the dataset\n",
-    "    train_dataset = dataset['train']\n",
-    "\n",
-    "    # Create a list to store the texts\n",
-    "    texts = []\n",
-    "\n",
-    "    # Iterate over the dataset\n",
-    "    for row in train_dataset:\n",
-    "        # Access the 'text' field and add it to the list\n",
-    "        texts.append(row['text'])\n",
-    "\n",
-    "    # Return the list of texts\n",
-    "    return texts\n",
-    "\n",
-    "# Call the function and store the result in a variable\n",
-    "texts = read_from_dataset()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/farisshatat/Documents/Python Testing/cuda/lib/python3.11/site-packages/datasets/load.py:1461: FutureWarning: The repository for Skylion007/openwebtext contains custom code which must be executed to correctly load the dataset. You can inspect the repository content at https://hf.co/datasets/Skylion007/openwebtext\n",
-      "You can avoid this message in future by passing the argument `trust_remote_code=True`.\n",
-      "Passing `trust_remote_code=True` will be mandatory to load this dataset from the next major release of `datasets`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4eb0b9ecda184f2c8aae218c84e08fec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Loading dataset shards:   0%|          | 0/80 [00:00<?, ?it/s]"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "\n",
-    "\n",
+    "with open('vocab.txt', 'r', encoding='utf-8') as f:\n",
+    "    text = f.read()\n",
     "chars = sorted(set(text))\n",
     "print(chars)\n",
     "vocab_size = len(chars)\n",
